Update products.html link

--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
             </div>
             <div class="product-content">
                 <div class="title">Sliding Tray</div>
-                <div class="price">Up to ₹1,000</div>
+                <div class="price">Under ₹1,000</div>
                 <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
             </div>
             
@@ -61,7 +61,7 @@
             <div class="product-content">
                 <div class="title">Vacuum Sealer</div>
                 <div class="price">Up to ₹3,000</div>
-                <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
+                <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
             </div>
         </main>
     <footer role="contentinfo">
