Update products.html vaccum

--- a/products.html
+++ b/products.html
@@ -58,12 +58,12 @@
                 <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
             </div>
         </div>
-        <div class="product" id="vacuum-sealer" data-name="Vacuum Sealer">
+        <div class="product" id="vaccum-sealer" data-name="Vaccum Sealer">
             <div class="image-container">
                 <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
             </div>
             <div class="product-content">
-                <div class="title">Vacuum Sealer</div>
+                <div class="title">Vaccum Sealer</div>
                 <div class="price">Up to ₹3,000</div>
                 <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
             </div>
