--- a/products.html
+++ b/products.html
@@ -38,6 +38,38 @@
     <div class="search-results" id="searchResults"></div>
 
     <main class="products" id="productList" role="region" aria-label="Product list">
+       <div class="product" id="mini-sealer" data-name="Mini Sealing Machine">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71utCY3f-JL._UF894,1000_QL80_FMwebp_.jpg" alt="Mini Sealing Machine">
+  </div>
+  <div class="product-content">
+    <div class="title">Mini Sealing Machine</div>
+    <div class="price">₹299 / $3.59</div>
+    <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="kitchen-mat" data-name="Kitchen Mat">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/619hMFvYSoL._UF894,1000_QL80_FMwebp_.jpg" alt="Kitchen Mat">
+  </div>
+  <div class="product-content">
+    <div class="title">Kitchen Mat</div>
+    <div class="price">₹699 / $8.39</div>
+    <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="knife-sharpener" data-name="Knife Sharpener">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/610WnGc6kPL._UF894,1000_QL80_FMwebp_.jpg" alt="Knife Sharpener">
+  </div>
+  <div class="product-content">
+    <div class="title">Knife Sharpener</div>
+    <div class="price">₹249 / $2.99</div>
+    <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
         <div class="product" id="philips-air-fryer" data-name="Philips Air Fryer">
             <div class="image-container">
                 <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
