--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
   </div>
   <div class="product-content">
     <div class="title">Mini Sealing Machine</div>
-    <div class="price">₹299 / $3.59</div>
+    <div class="price">Under ₹300 / $4</div>
     <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank" rel="noopener">Buy Now</a>
   </div>
 </div>
@@ -55,7 +55,7 @@
   </div>
   <div class="product-content">
     <div class="title">Kitchen Mat</div>
-    <div class="price">₹699 / $8.39</div>
+    <div class="price">Under ₹700 / $9</div>
     <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank" rel="noopener">Buy Now</a>
   </div>
 </div>
@@ -66,7 +66,7 @@
   </div>
   <div class="product-content">
     <div class="title">Knife Sharpener</div>
-    <div class="price">₹249 / $2.99</div>
+    <div class="price">Under ₹250 / $3</div>
     <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
   </div>
 </div>
