--- a/products.html
+++ b/products.html
@@ -38,7 +38,40 @@
     <div class="search-results" id="searchResults"></div>
 
     <main class="products" id="productList" role="region" aria-label="Product list">
-       <div class="product" id="mini-sealer" data-name="Mini Sealing Machine">
+      <div class="product" id="philips-air-fryer" data-name="Philips Air Fryer">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
+  </div>
+  <div class="product-content">
+    <div class="title">Philips Air Fryer</div>
+    <div class="price">Up to ₹10,000 / $120</div>
+    <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="sliding-tray" data-name="Sliding Tray">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
+  </div>
+  <div class="product-content">
+    <div class="title">Sliding Tray</div>
+    <div class="price">Under ₹1,000 / $12</div>
+    <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="vaccum-sealer" data-name="Vacuum Sealer">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
+  </div>
+  <div class="product-content">
+    <div class="title">Vacuum Sealer</div>
+    <div class="price">Up to ₹3,000 / $36</div>
+    <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+        
+        <div class="product" id="mini-sealer" data-name="Mini Sealing Machine">
   <div class="image-container">
     <img src="https://m.media-amazon.com/images/I/71utCY3f-JL._UF894,1000_QL80_FMwebp_.jpg" alt="Mini Sealing Machine">
   </div>
@@ -69,36 +102,7 @@
     <div class="price">Under ₹250 / $3</div>
     <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
   </div>
-</div>
-        <div class="product" id="philips-air-fryer" data-name="Philips Air Fryer">
-            <div class="image-container">
-                <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
-            </div>
-            <div class="product-content">
-                <div class="title">Philips Air Fryer</div>
-                <div class="price">Up to ₹10,000</div>
-                <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
-            </div>
-        </div>
-        <div class="product" id="sliding-tray" data-name="Sliding Tray">
-            <div class="image-container">
-                <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
-            </div>
-            <div class="product-content">
-                <div class="title">Sliding Tray</div>
-                <div class="price">Under ₹1,000</div>
-                <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
-            </div>
-        </div>
-        <div class="product" id="vaccum-sealer" data-name="Vaccum Sealer">
-            <div class="image-container">
-                <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
-            </div>
-            <div class="product-content">
-                <div class="title">Vaccum Sealer</div>
-                <div class="price">Up to ₹3,000</div>
-                <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
-            </div>
+
         </div>
     </main>
 
