--- a/office-meal-plan.html
+++ b/office-meal-plan.html
@@ -291,11 +291,8 @@
             <div class="footer-column">
                 <h3>Contact Us</h3>
                 <ul class="footer-links">
-                    <li><a href="#"><i class="fas fa-envelope"></i> hello@kitchenlink.com</a></li>
-                    <li><a href="#"><i class="fas fa-phone"></i> +91 98765 43210</a></li>
-                    <li><a href="#"><i class="fas fa-map-marker-alt"></i> Mumbai, India</a></li>
-                    <li><a href="#"><i class="fas fa-clock"></i> Mon-Fri: 9AM-6PM</a></li>
-                </ul>
+                    <li><a href="#"><i class="fas fa-envelope"></i> virapublishers@gmail.com</a></li>
+                       </ul>
             </div>
         </div>
         <div class="copyright">
