--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="footer-column">
                 <h3>Contact Us</h3>
                 <ul class="footer-links">
-                    <li><a href="#"><i class="fas fa-envelope"></i> hello@kitchenlink.com</a></li>
+                    <li><a href="#"><i class="fas fa-envelope"></i> virapublishers@gmail.com</a></li>
                      </ul>
             </div>
         </div>
