--- a/products.html
+++ b/products.html
@@ -38,7 +38,37 @@
     <div class="search-results" id="searchResults"></div>
 
     <main class="products" id="productList" role="region" aria-label="Product list">
-      <div class="product" id="philips-air-fryer" data-name="Philips Air Fryer">
+       <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/619zlfuWKgL._SL1001_.jpg" alt="3-in-1 Breakfast Maker">
+  </div>
+  <div class="product-content">
+    <div class="title">3-in-1 Breakfast Maker</div>
+    <div class="price">Up to ₹8,000</div>
+    <a href="https://amzn.to/45K1VkQ" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="multi-cooker" data-name="Prestige Multi-Cooker 1.5L">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71OHF3Zl0bL._SL1500_.jpg" alt="Prestige Multi-Cooker">
+  </div>
+  <div class="product-content">
+    <div class="title">Prestige Multi-Cooker 1.5L</div>
+    <div class="price">Under ₹2,500</div>
+    <a href="https://amzn.to/4kll3ZT" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="atomberg-mixer" data-name="Atomberg Zenova Mixer Grinder">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/81haDHz+llL._SL1500_.jpg" alt="Atomberg Zenova Mixer Grinder">
+  </div>
+  <div class="product-content">
+    <div class="title">Atomberg Zenova Mixer Grinder</div>
+    <div class="price">Up to ₹7,000</div>
+    <a href="https://amzn.to/4ex7lCf" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+        <div class="product" id="philips-air-fryer" data-name="Philips Air Fryer">
   <div class="image-container">
     <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
   </div>
