--- a/products.html
+++ b/products.html
@@ -38,103 +38,105 @@
     <div class="search-results" id="searchResults"></div>
 
     <main class="products" id="productList" role="region" aria-label="Product list">
-       <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/619zlfuWKgL._SL1001_.jpg" alt="3-in-1 Breakfast Maker">
-  </div>
-  <div class="product-content">
-    <div class="title">3-in-1 Breakfast Maker</div>
-    <div class="price">Up to ₹8,000</div>
-    <a href="https://amzn.to/45K1VkQ" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-</div>
-
-<div class="product" id="multi-cooker" data-name="Prestige Multi-Cooker 1.5L">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/71OHF3Zl0bL._SL1500_.jpg" alt="Prestige Multi-Cooker">
-  </div>
-  <div class="product-content">
-    <div class="title">Prestige Multi-Cooker 1.5L</div>
-    <div class="price">Under ₹2,500</div>
-    <a href="https://amzn.to/4kll3ZT" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-</div>
-
-<div class="product" id="atomberg-mixer" data-name="Atomberg Zenova Mixer Grinder">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/81haDHz+llL._SL1500_.jpg" alt="Atomberg Zenova Mixer Grinder">
-  </div>
-  <div class="product-content">
-    <div class="title">Atomberg Zenova Mixer Grinder</div>
-    <div class="price">Up to ₹7,000</div>
-    <a href="https://amzn.to/4ex7lCf" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-        <div class="product" id="philips-air-fryer" data-name="Philips Air Fryer">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
-  </div>
-  <div class="product-content">
-    <div class="title">Philips Air Fryer</div>
-    <div class="price">Up to ₹10,000 / $120</div>
-    <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-</div>
-
-<div class="product" id="sliding-tray" data-name="Sliding Tray">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
-  </div>
-  <div class="product-content">
-    <div class="title">Sliding Tray</div>
-    <div class="price">Under ₹1,000 / $12</div>
-    <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-</div>
-
-<div class="product" id="vaccum-sealer" data-name="Vacuum Sealer">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
-  </div>
-  <div class="product-content">
-    <div class="title">Vacuum Sealer</div>
-    <div class="price">Up to ₹3,000 / $36</div>
-    <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-</div>
-        
-        <div class="product" id="mini-sealer" data-name="Mini Sealing Machine">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/71utCY3f-JL._UF894,1000_QL80_FMwebp_.jpg" alt="Mini Sealing Machine">
-  </div>
-  <div class="product-content">
-    <div class="title">Mini Sealing Machine</div>
-    <div class="price">Under ₹300 / $4</div>
-    <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-</div>
-
-<div class="product" id="kitchen-mat" data-name="Kitchen Mat">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/619hMFvYSoL._UF894,1000_QL80_FMwebp_.jpg" alt="Kitchen Mat">
-  </div>
-  <div class="product-content">
-    <div class="title">Kitchen Mat</div>
-    <div class="price">Under ₹700 / $9</div>
-    <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank" rel="noopener">Buy Now</a>
-  </div>
-</div>
-
-<div class="product" id="knife-sharpener" data-name="Knife Sharpener">
-  <div class="image-container">
-    <img src="https://m.media-amazon.com/images/I/610WnGc6kPL._UF894,1000_QL80_FMwebp_.jpg" alt="Knife Sharpener">
-  </div>
-  <div class="product-content">
-    <div class="title">Knife Sharpener</div>
-    <div class="price">Under ₹250 / $3</div>
-    <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  <div class="product" id="breakfast-station" data-name="3-in-1 Breakfast Maker">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/619zlfuWKgL._SL1001_.jpg" alt="3-in-1 Breakfast Maker">
+    </div>
+    <div class="product-content">
+      <div class="title">3-in-1 Breakfast Maker</div>
+      <div class="price">Up to ₹8,000 / $95.99</div>
+      <a href="https://amzn.to/45K1VkQ" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
   </div>
 
-        </div>
-    </main>
+  <div class="product" id="multi-cooker" data-name="Prestige Multi-Cooker 1.5L">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/71OHF3Zl0bL._SL1500_.jpg" alt="Prestige Multi-Cooker">
+    </div>
+    <div class="product-content">
+      <div class="title">Prestige Multi-Cooker 1.5L</div>
+      <div class="price">Under ₹2,500 / $29.99</div>
+      <a href="https://amzn.to/4kll3ZT" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+
+  <div class="product" id="atomberg-mixer" data-name="Atomberg Zenova Mixer Grinder">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/81haDHz+llL._SL1500_.jpg" alt="Atomberg Zenova Mixer Grinder">
+    </div>
+    <div class="product-content">
+      <div class="title">Atomberg Zenova Mixer Grinder</div>
+      <div class="price">Up to ₹7,000 / $84.99</div>
+      <a href="https://amzn.to/4ex7lCf" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+
+  <div class="product" id="philips-air-fryer" data-name="Philips Air Fryer">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
+    </div>
+    <div class="product-content">
+      <div class="title">Philips Air Fryer</div>
+      <div class="price">Up to ₹10,000 / $120</div>
+      <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+
+  <div class="product" id="sliding-tray" data-name="Sliding Tray">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
+    </div>
+    <div class="product-content">
+      <div class="title">Sliding Tray</div>
+      <div class="price">Under ₹1,000 / $11.99</div>
+      <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+
+  <div class="product" id="vaccum-sealer" data-name="Vacuum Sealer">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
+    </div>
+    <div class="product-content">
+      <div class="title">Vacuum Sealer</div>
+      <div class="price">Up to ₹3,000 / $35.99</div>
+      <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+
+  <div class="product" id="mini-sealer" data-name="Mini Sealing Machine">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/71utCY3f-JL._UF894,1000_QL80_FMwebp_.jpg" alt="Mini Sealing Machine">
+    </div>
+    <div class="product-content">
+      <div class="title">Mini Sealing Machine</div>
+      <div class="price">Under ₹500 / $3.59</div>
+      <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+
+  <div class="product" id="kitchen-mat" data-name="Kitchen Mat">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/619hMFvYSoL._UF894,1000_QL80_FMwebp_.jpg" alt="Kitchen Mat">
+    </div>
+    <div class="product-content">
+      <div class="title">Kitchen Mat</div>
+      <div class="price">Under ₹700 / $8.39</div>
+      <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+
+  <div class="product" id="knife-sharpener" data-name="Knife Sharpener">
+    <div class="image-container">
+      <img src="https://m.media-amazon.com/images/I/610WnGc6kPL._UF894,1000_QL80_FMwebp_.jpg" alt="Knife Sharpener">
+    </div>
+    <div class="product-content">
+      <div class="title">Knife Sharpener</div>
+      <div class="price">Under ₹250 / $2.99</div>
+      <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+  </div>
+</main>
 
     <footer role="contentinfo">
         <div class="footer-content">
