--- a/products.html
+++ b/products.html
@@ -37,8 +37,128 @@
 
     <div class="search-results" id="searchResults"></div>
 
-    <main class="products" id="productList" role="region" aria-label="Product list">
-  <div class="product" id="breakfast-station" data-name="3-in-1 Breakfast Maker">
+    <main class="products" id="productList" role="region" aria-label="Product list"> 
+        <div class="product" id="inkbird-thermometer" data-name="INKBIRD Bluetooth Meat Thermometer">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71UtnkqnYCL._SL1500_.jpg" alt="INKBIRD Bluetooth Meat Thermometer">
+  </div>
+  <div class="product-content">
+    <div class="title">INKBIRD Bluetooth Meat Thermometer</div>
+    <div class="price">₹2,090 / $25.18</div>
+    <a href="https://amzn.to/3TjlTvu" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="bbqgo-gloves" data-name="BBQGO BBQ Grill Gloves">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61vMY+WRAZL._SL1500_.jpg" alt="BBQGO BBQ Grill Gloves">
+  </div>
+  <div class="product-content">
+    <div class="title">BBQGO BBQ Grill Gloves</div>
+    <div class="price">₹1,292 / $15.57</div>
+    <a href="https://amzn.to/3ZTGlXp" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="breakfast-maker" data-name="Electric Breakfast Sandwich Maker">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61LUXbVnxjL._SL1500_.jpg" alt="Electric Breakfast Sandwich Maker">
+  </div>
+  <div class="product-content">
+    <div class="title">Electric Breakfast Sandwich Maker</div>
+    <div class="price">₹5,699 / $68.66</div>
+    <a href="https://amzn.to/3TRB1Ae" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="mini-chopper" data-name="Mini Food Chopper">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61UmnOTKVFL._SL1080_.jpg" alt="Mini Food Chopper">
+  </div>
+  <div class="product-content">
+    <div class="title">Mini Food Chopper</div>
+    <div class="price">₹3,700 / $44.58</div>
+    <a href="https://amzn.to/3ZXneM8" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="smart-scale" data-name="Smart Measuring Spoon/Scale">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71yo8PyCRwL._SL1500_.jpg" alt="Smart Measuring Spoon/Scale">
+  </div>
+  <div class="product-content">
+    <div class="title">Smart Measuring Spoon/Scale</div>
+    <div class="price">₹1,199 / $14.45</div>
+    <a href="https://amzn.to/4l6Z1eD" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="auto-stirrer" data-name="Automatic Stirring Pot Tool">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61YUQzBHRpL._SL1500_.jpg" alt="Automatic Stirring Pot Tool">
+  </div>
+  <div class="product-content">
+    <div class="title">Automatic Stirring Pot Tool</div>
+    <div class="price">₹13,475.98 / $162.36</div>
+    <a href="https://amzn.to/4kljH1o" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="spice-rack" data-name="Magnetic Spice Rack Organizer">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71ILXxzPrnL._SL1500_.jpg" alt="Magnetic Spice Rack Organizer">
+  </div>
+  <div class="product-content">
+    <div class="title">Magnetic Spice Rack Organizer</div>
+    <div class="price">₹2,299 / $27.70</div>
+    <a href="https://amzn.to/40xGaBh" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="veg-slicer" data-name="Multi-Function Vegetable Slicer">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/714KMq8ALwL._SL1500_.jpg" alt="Multi-Function Vegetable Slicer">
+  </div>
+  <div class="product-content">
+    <div class="title">Multi-Function Vegetable Slicer</div>
+    <div class="price">₹3,499 / $42.16</div>
+    <a href="https://amzn.to/40y9ebL" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="cabinet-light" data-name="Under Cabinet Lighting (Rechargeable)">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71XvKLC3GgL._SL1500_.jpg" alt="Under Cabinet Lighting Rechargeable">
+  </div>
+  <div class="product-content">
+    <div class="title">Under Cabinet Lighting (Rechargeable)</div>
+    <div class="price">₹699 / $8.42</div>
+    <a href="https://amzn.to/3I92T05" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="silicone-bags" data-name="Reusable Silicone Zip Bags">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/81ioPY352VL._SL1500_.jpg" alt="Reusable Silicone Zip Bags">
+  </div>
+  <div class="product-content">
+    <div class="title">Reusable Silicone Zip Bags</div>
+    <div class="price">₹700 / $8.43</div>
+    <a href="https://amzn.to/4keOzR1" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="tap-filter" data-name="Smart Tap Water Filter Dispenser">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/51vG9anK5GL.jpg" alt="Smart Tap Water Filter Dispenser">
+  </div>
+  <div class="product-content">
+    <div class="title">Smart Tap Water Filter Dispenser</div>
+    <div class="price">₹299 / $3.60</div>
+    <a href="https://amzn.to/4etDQBd" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+        <div class="product" id="breakfast-station" data-name="3-in-1 Breakfast Maker">
     <div class="image-container">
       <img src="https://m.media-amazon.com/images/I/619zlfuWKgL._SL1001_.jpg" alt="3-in-1 Breakfast Maker">
     </div>
