Update index.html temporary

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <h3>Contact Us</h3>
                 <ul class="footer-links">
                     <li><a href="#"><i class="fas fa-envelope"></i> virapublishers@gmail.com</a></li>
+                    <li><a href="mailto:vishwaraajpublisher@outlook.com">kitchenlink@query.com</a></li>
                      </ul>
             </div>
         </div>
