--- a/office-meal-plan.html
+++ b/office-meal-plan.html
@@ -291,7 +291,7 @@
             <div class="footer-column">
                 <h3>Contact Us</h3>
                 <ul class="footer-links">
-                    <li><a href="#"><i class="fas fa-envelope"></i> virapublishers@gmail.com</a></li>
+                    <li><a href="mailto: virapublishers@gmail.com"><i class="fas fa-envelope"></i> kitchenlink@query.com</a></li>
                        </ul>
             </div>
         </div>
