--- a/products.html
+++ b/products.html
@@ -38,6 +38,131 @@
     <div class="search-results" id="searchResults"></div>
 
     <main class="products" id="productList" role="region" aria-label="Product list"> 
+        <div class="product-content">
+  <div class="title">Collapsible Electric Kettle</div>
+  <div class="price">₹1,499 / $18</div>
+  <a href="https://amzn.to/448SSZx" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Automatic Soap Dispenser</div>
+  <div class="price">₹1,388 / $17</div>
+  <a href="https://amzn.to/46sLIRc" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Magnetic Fridge Shelf Rack</div>
+  <div class="price">₹1,199 / $14</div>
+  <a href="https://amzn.to/44rEZEO" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Fridge Organizer Bins (Clear, Stackable)</div>
+  <div class="price">₹2,395 / $29</div>
+  <a href="https://amzn.to/3I98vaY" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Smart Trash Can with Motion Sensor</div>
+  <div class="price">₹2,999 / $36</div>
+  <a href="https://amzn.to/4euARZe" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Electric Jar Opener</div>
+  <div class="price">₹1,571 / $19</div>
+  <a href="https://amzn.to/44sVwbo" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Automatic Oil Dispenser Bottle (with sensor)</div>
+  <div class="price">₹304 / $4</div>
+  <a href="https://amzn.to/3In9G6p" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Roll-Up Over-Sink Drying Rack</div>
+  <div class="price">₹649 / $8</div>
+  <a href="https://amzn.to/3GpXMIo" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Microwave Cleaner Steamer (Angry Mama Style)</div>
+  <div class="price">₹399 / $5</div>
+  <a href="https://amzn.to/4nuE7rE" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Mini Ice Cube Tray with Lid & Scoop</div>
+  <div class="price">₹745 / $9</div>
+  <a href="https://amzn.to/4klNqY9" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">NexLev Steam Cleaner</div>
+  <div class="price">₹0 / $0</div>
+  <a href="https://amzn.to/44bqypt" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">2-in-1 Cutting Board with Drain Tray</div>
+  <div class="price">₹3,397 / $41</div>
+  <a href="https://amzn.to/4lbuc8R" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Automatic Pan Stirrer with Timer</div>
+  <div class="price">₹1,299 / $16</div>
+  <a href="https://amzn.to/44rdDOR" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Wall-Mounted Rice & Grain Dispenser</div>
+  <div class="price">₹2,299 / $28</div>
+  <a href="https://amzn.to/4lBVDsk" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Electric Milk Frother Wand</div>
+  <div class="price">₹1,299 / $16</div>
+  <a href="https://amzn.to/4eycpWQ" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Digital Measuring Spoon</div>
+  <div class="price">₹999 / $12</div>
+  <a href="https://amzn.to/45LPtkF" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Silicone Food Covers (Stretch Lids)</div>
+  <div class="price">₹228 / $3</div>
+  <a href="https://amzn.to/4ljDu2o" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Magnetic Measuring Spoons Set</div>
+  <div class="price">₹3,960 / $48</div>
+  <a href="https://amzn.to/4lx0DOF" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Mini Electric Garlic Chopper</div>
+  <div class="price">₹1,199 / $14</div>
+  <a href="https://amzn.to/4lTqxwv" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Cupboard/Under-Shelf Basket Organizer</div>
+  <div class="price">₹527 / $6</div>
+  <a href="https://amzn.to/400tdQd" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
+
+<div class="product-content">
+  <div class="title">Silicone Air Fryer Liners (Reusable)</div>
+  <div class="price">₹579 / $7</div>
+  <a href="https://amzn.to/4km5dOF" class="buy" target="_blank" rel="noopener">Buy Now</a>
+</div>
         <div class="product" id="inkbird-thermometer" data-name="INKBIRD Bluetooth Meat Thermometer">
   <div class="image-container">
     <img src="https://m.media-amazon.com/images/I/71UtnkqnYCL._SL1500_.jpg" alt="INKBIRD Bluetooth Meat Thermometer">
