--- a/products.html
+++ b/products.html
@@ -145,23 +145,224 @@
   <div class="price">₹3,960 / $48</div>
   <a href="https://amzn.to/4lx0DOF" class="buy" target="_blank" rel="noopener">Buy Now</a>
 </div>
-
-<div class="product-content">
-  <div class="title">Mini Electric Garlic Chopper</div>
-  <div class="price">₹1,199 / $14</div>
-  <a href="https://amzn.to/4lTqxwv" class="buy" target="_blank" rel="noopener">Buy Now</a>
+<div class="product" id="Collapsible Electric Kettle" data-name="Collapsible Electric Kettle">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61WQVNM0LCL._SL1500_.jpg" alt="Collapsible Electric Kettle">
+  </div>
+  <div class="product-content">
+    <div class="title">Collapsible Electric Kettle</div>
+    <div class="price">Upto ₹1,500 / $17.51</div>
+    <a href="https://amzn.to/448SSZx" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
 </div>
 
-<div class="product-content">
-  <div class="title">Cupboard/Under-Shelf Basket Organizer</div>
-  <div class="price">₹527 / $6</div>
-  <a href="https://amzn.to/400tdQd" class="buy" target="_blank" rel="noopener">Buy Now</a>
+<div class="product" id="Automatic Soap Dispenser" data-name="Automatic Soap Dispenser">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61Vqx4KEHuL._SL1024_.jpg" alt="Automatic Soap Dispenser">
+  </div>
+  <div class="product-content">
+    <div class="title">Automatic Soap Dispenser</div>
+    <div class="price">Under ₹1,500 / $16.21</div>
+    <a href="https://amzn.to/46sLIRc" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
 </div>
 
-<div class="product-content">
-  <div class="title">Silicone Air Fryer Liners (Reusable)</div>
-  <div class="price">₹579 / $7</div>
-  <a href="https://amzn.to/4km5dOF" class="buy" target="_blank" rel="noopener">Buy Now</a>
+<div class="product" id="Magnetic Fridge Shelf Rack" data-name="Magnetic Fridge Shelf Rack">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/81gCEjDOpSL._SL1500_.jpg" alt="Magnetic Fridge Shelf Rack">
+  </div>
+  <div class="product-content">
+    <div class="title">Magnetic Fridge Shelf Rack</div>
+    <div class="price">Under ₹1,500 / $14.00</div>
+    <a href="https://amzn.to/44rEZEO" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Fridge Organizer Bins (Clear, Stackable)" data-name="Fridge Organizer Bins (Clear, Stackable)">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71S+IrhvQPL._SL1500_.jpg" alt="Fridge Organizer Bins (Clear, Stackable)">
+  </div>
+  <div class="product-content">
+    <div class="title">Fridge Organizer Bins (Clear, Stackable)</div>
+    <div class="price">Under ₹2,500 / $27.97</div>
+    <a href="https://amzn.to/3I98vaY" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Smart Trash Can with Motion Sensor" data-name="Smart Trash Can with Motion Sensor">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/615kYHdRG0L._SL1500_.jpg" alt="Smart Trash Can with Motion Sensor">
+  </div>
+  <div class="product-content">
+    <div class="title">Smart Trash Can with Motion Sensor</div>
+    <div class="price">Upto ₹3,000 / $35.03</div>
+    <a href="https://amzn.to/4euARZe" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Electric Jar Opener" data-name="Electric Jar Opener">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71XbxJC8QLL._SL1500_.jpg" alt="Electric Jar Opener">
+  </div>
+  <div class="product-content">
+    <div class="title">Electric Jar Opener</div>
+    <div class="price">Under ₹2,000 / $18.35</div>
+    <a href="https://amzn.to/44sVwbo" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Automatic Oil Dispenser Bottle (with sensor)" data-name="Automatic Oil Dispenser Bottle (with sensor)">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/814ea9qZTML._SL1500_.jpg" alt="Automatic Oil Dispenser Bottle (with sensor)">
+  </div>
+  <div class="product-content">
+    <div class="title">Automatic Oil Dispenser Bottle (with sensor)</div>
+    <div class="price">Under ₹500 / $3.55</div>
+    <a href="https://amzn.to/3In9G6p" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Roll-Up Over-Sink Drying Rack" data-name="Roll-Up Over-Sink Drying Rack">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/81lEuQodtVL._SL1466_.jpg" alt="Roll-Up Over-Sink Drying Rack">
+  </div>
+  <div class="product-content">
+    <div class="title">Roll-Up Over-Sink Drying Rack</div>
+    <div class="price">Under ₹1,000 / $7.58</div>
+    <a href="https://amzn.to/3GpXMIo" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Microwave Cleaner Steamer (Angry Mama Style)" data-name="Microwave Cleaner Steamer (Angry Mama Style)">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61PvRIsez6L._SL1500_.jpg" alt="Microwave Cleaner Steamer (Angry Mama Style)">
+  </div>
+  <div class="product-content">
+    <div class="title">Microwave Cleaner Steamer (Angry Mama Style)</div>
+    <div class="price">Under ₹500 / $4.66</div>
+    <a href="https://amzn.to/4nuE7rE" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Mini Ice Cube Tray with Lid & Scoop" data-name="Mini Ice Cube Tray with Lid & Scoop">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71Ce4GiWbZL._SL1500_.jpg" alt="Mini Ice Cube Tray with Lid & Scoop">
+  </div>
+  <div class="product-content">
+    <div class="title">Mini Ice Cube Tray with Lid & Scoop</div>
+    <div class="price">Under ₹1,000 / $8.70</div>
+    <a href="https://amzn.to/4klNqY9" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="2-in-1 Cutting Board with Drain Tray" data-name="2-in-1 Cutting Board with Drain Tray">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71lTRNr2zmL._SL1500_.jpg" alt="2-in-1 Cutting Board with Drain Tray">
+  </div>
+  <div class="product-content">
+    <div class="title">2-in-1 Cutting Board with Drain Tray</div>
+    <div class="price">Under ₹3,500 / $39.68</div>
+    <a href="https://amzn.to/4lbuc8R" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Automatic Pan Stirrer with Timer" data-name="Automatic Pan Stirrer with Timer">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/51PuutE8okL._SL1500_.jpg" alt="Automatic Pan Stirrer with Timer">
+  </div>
+  <div class="product-content">
+    <div class="title">Automatic Pan Stirrer with Timer</div>
+    <div class="price">Under ₹1,500 / $15.17</div>
+    <a href="https://amzn.to/44rdDOR" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Wall-Mounted Rice & Grain Dispenser" data-name="Wall-Mounted Rice & Grain Dispenser">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/51emxzXRleL._SL1000_.jpg" alt="Wall-Mounted Rice & Grain Dispenser">
+  </div>
+  <div class="product-content">
+    <div class="title">Wall-Mounted Rice & Grain Dispenser</div>
+    <div class="price">Under ₹2,500 / $26.85</div>
+    <a href="https://amzn.to/4lBVDsk" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Electric Milk Frother Wand" data-name="Electric Milk Frother Wand">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71MYVP0d-9L._SL1500_.jpg" alt="Electric Milk Frother Wand">
+  </div>
+  <div class="product-content">
+    <div class="title">Electric Milk Frother Wand</div>
+    <div class="price">Under ₹1,500 / $15.17</div>
+    <a href="https://amzn.to/4eycpWQ" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Digital Measuring Spoon" data-name="Digital Measuring Spoon">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/613c9s2femL._SL1500_.jpg" alt="Digital Measuring Spoon">
+  </div>
+  <div class="product-content">
+    <div class="title">Digital Measuring Spoon</div>
+    <div class="price">Upto ₹1,000 / $11.67</div>
+    <a href="https://amzn.to/45LPtkF" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Silicone Food Covers (Stretch Lids)" data-name="Silicone Food Covers (Stretch Lids)">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71KD-jSETqL._SL1500_.jpg" alt="Silicone Food Covers (Stretch Lids)">
+  </div>
+  <div class="product-content">
+    <div class="title">Silicone Food Covers (Stretch Lids)</div>
+    <div class="price">Under ₹500 / $2.66</div>
+    <a href="https://amzn.to/4ljDu2o" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Magnetic Measuring Spoons Set" data-name="Magnetic Measuring Spoons Set">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/618pvaVahwS._SL1500_.jpg" alt="Magnetic Measuring Spoons Set">
+  </div>
+  <div class="product-content">
+    <div class="title">Magnetic Measuring Spoons Set</div>
+    <div class="price">Upto ₹4,000 / $46.25</div>
+    <a href="https://amzn.to/4lx0DOF" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Mini Electric Garlic Chopper" data-name="Mini Electric Garlic Chopper">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/91eGUYYMfAL._SL1500_.jpg" alt="Mini Electric Garlic Chopper">
+  </div>
+  <div class="product-content">
+    <div class="title">Mini Electric Garlic Chopper</div>
+    <div class="price">Under ₹1,500 / $14.00</div>
+    <a href="https://amzn.to/4lTqxwv" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Cupboard/Under-Shelf Basket Organizer" data-name="Cupboard/Under-Shelf Basket Organizer">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/61fNmHMWj3L._SL1001_.jpg" alt="Cupboard/Under-Shelf Basket Organizer">
+  </div>
+  <div class="product-content">
+    <div class="title">Cupboard/Under-Shelf Basket Organizer</div>
+    <div class="price">Under ₹1,000 / $6.15</div>
+    <a href="https://amzn.to/400tdQd" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
+</div>
+
+<div class="product" id="Silicone Air Fryer Liners (Reusable)" data-name="Silicone Air Fryer Liners (Reusable)">
+  <div class="image-container">
+    <img src="https://m.media-amazon.com/images/I/71j85bJWMJL._SL1500_.jpg" alt="Silicone Air Fryer Liners (Reusable)">
+  </div>
+  <div class="product-content">
+    <div class="title">Silicone Air Fryer Liners (Reusable)</div>
+    <div class="price">Under ₹1,000 / $6.76</div>
+    <a href="https://amzn.to/4km5dOF" class="buy" target="_blank" rel="noopener">Buy Now</a>
+  </div>
 </div>
         <div class="product" id="inkbird-thermometer" data-name="INKBIRD Bluetooth Meat Thermometer">
   <div class="image-container">
